# winnoisegen

./: .gitignore  Cargo.toml  README.md  build.rs  readme.md
.cargo/: config.toml
.zed/: task.nu  tasks.json
assets/: Icon.afphoto
examples/: cpal_out.rs  encode_qoa.rs
src/: app.rs  audio.rs  main.rs  shader.wgsl  tray_icon.rs  utils.rs
src/shaders/: shader.wgsl
src/subsystems/: audio.rs  mod.rs  renderer.rs  tray_icon.rs  watcher.rs  winit.rs
src/subsystems/audio/: mod.rs  opus_atlas.rs
