cargo-features = ["profile-rustflags"]

[package]
name        = "winnoisegen"
version     = "0.1.0"
edition     = "2024"
authors     = ["Kaem <kaemviotto@icloud.com>"]
description = "Create constant rain noise from the tray"

[dependencies]
anyhow             = "1.0"
cpal               = "0.17"
image              = {
	version          = "0.25",
	default-features = false,
	features         = ["png"]
}
qoaudio            = { git = "https://github.com/rafaelcaricio/qoaudio.git" }
ringbuf            = "0.4"
tracing            = "0.1"
tracing-subscriber = {
	version          = "0.3",
	default-features = false,
	features         = ["fmt", "std"]
}
tray-icon          = { version = "0.22", default-features = false }
windows            = {
	version  = "0.62",
	features = ["Win32_System_Registry", "Win32_UI_WindowsAndMessaging"]
}

[dev-dependencies]
hound = "3.5"

[profile.release]
lto           = "fat"
panic         = "abort"
codegen-units = 1
rustflags     = ["-C", "target-cpu=native"]
